2012-08-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h:
	* Source/CFRuntime.c: Add a private deallocation function.
	* Source/NSCFArray.m:
	* Source/NSCFData.m:
	* Source/NSCFError.m:
	* Source/NSCFString.m:
	* Source/NSCFType.m: Implement -dealloc.

2012-08-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Header/CoreFoundation/CFRunLoop.h:
	* Source/GNUmakefile.in:
	* Source/CFRunLoop.c:
	* Source/CFRuntime.c: Add CFRunLoop skeleton.

2012-08-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStream.m: Delete.
	* Source/CFStream.c: Add CFStream skeleton.
	* Source/GNUmakefile: Include CFStream.c to build.

2012-08-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDate.c: Added copy, equal and hash functions.
	* Source/CFNumber.c: Added copy function.
	* Source/CFPropertyList.c: Implement CFPropertyListCreateDeepCopy().
	* Source/GSPrivate.h:
	* Source/CFRuntime.c: Added a function to copy CFTypeRefs.

2012-08-05 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile.in: Include CFPropertyList.c in build.
	* Source/CFPropertyList.c: Implement CFPropertyListIsValid().
	* Tests/CFPropertyList/validate.m: Tests for CFPropertyListIsValid().

2012-08-05 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h: Include CFPropertyList.h
	and CFStream.h.
	* Headers/CoreFoundation/CFRunLoop.h: Protect against multiple inclusion.
	* Headers/CoreFoundation/CFBase.h: Fix CFPropertyListRef definition.
	* Headers/CoreFoundation/CFStream.h: Include CFRunLoop.h.
	* Source/GNUmakefile.in: Install CFPropertyList.h and CFStream.h.

2012-08-05 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDictionary.c: Implement CFDictionaryApplyFunction().
	* Source/GSHashTable.c: Reduce count when key-value pair is removed.

2012-08-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Tests/CFTesting.h: Implement a version of pass() and PASS() so
	that testing of Corebase types are not dependent of ObjC classes.
